monitoring/argocd/applications/kube-prometheus-stack/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "alertmanager.zimrri.com" # Make sure this matches the global.domain in values.yaml
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
