monitoring/argocd/applications/kube-prometheus-stack/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "prometheus.zimrri.com" # Make sure this matches the global.domain in values.yaml
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
